# git-split

./: README.rst  filterbranch.py  git_callback.py  setup.cfg  setup.py  split-repository  tox.ini
git_split/: filterbranch.py  git_callback.py  main.py
