# Copyright 2020 Hewlett Packard Enterprise Development LP

[metadata]
name = git-split
author = Darragh Bailey
author-email = daragh.bailey@gmail.com
summary = Simple tool to help filtering history of a repository into multiple components
license = Apache 2.0
keywords = git-split
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent

[files]
packages =
    split_git

[entry_points]
console_scripts =
    split-repository=git_split.main:main

[easy_install]
